--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "xinxin.li",
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "rimraf ./Weather/Dist && set NODE_ENV=production & webpack --progress --colors --config ./config/webpack.prod.js"
+    "build": "rimraf ./Weather/Dist && set NODE_ENV=production & webpack --progress --colors --config ./config/webpack.production.js"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
