--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-actions": "^2.2.1",
     "redux-form": "^6.2.1",
     "redux-saga": "^0.12.0",
     "whatwg-fetch": "^1.0.0"
