--- a/Weather/Web.config
+++ b/Weather/Web.config
@@ -14,6 +14,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+</system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
