add the asset settings

--- a/Weather/Weather.csproj
+++ b/Weather/Weather.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\WebpackSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\ExternalServices\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -196,7 +197,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Domains\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
