--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "weather data for fun frontend",
   "author": "xinxin.li",
   "scripts": {
+    "test": "jest",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
     "build": "rimraf ./Weather/Dist && set NODE_ENV=production & webpack --progress --colors --config ./config/webpack.production.js"
   },
@@ -11,6 +12,7 @@
     "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
@@ -24,8 +26,10 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^3.0.0",
+    "jest": "^20.0.4",
     "json-server": "^0.8.22",
     "node-sass": "^4.5.3",
+    "regenerator-runtime": "^0.10.5",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -54,5 +58,15 @@
     "redux-form": "^6.2.1",
     "redux-saga": "^0.15.5",
     "whatwg-fetch": "^1.0.0"
+  },
+  "jest": {
+    "transform": {},
+    "moduleFileExtensions": [
+      "jsx",
+      "js"
+    ],
+    "testRegex": "/tests/.*.(jsx|js)$",
+    "verbose": true,
+    "collectCoverage": true
   }
 }
