--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "es6-shim": "^0.35.3",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
@@ -29,6 +30,8 @@
     "jest": "^20.0.4",
     "json-server": "^0.8.22",
     "node-sass": "^4.5.3",
+    "react-addons-test-utils": "^15.6.0",
+    "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.10.5",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.6",
@@ -60,13 +63,25 @@
     "whatwg-fetch": "^1.0.0"
   },
   "jest": {
-    "transform": {},
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
     "moduleFileExtensions": [
       "jsx",
       "js"
     ],
+    "modulePathIgnorePatterns": [],
+    "testPathIgnorePatterns":["__snapshots__"],
     "testRegex": "/tests/.*.(jsx|js)$",
     "verbose": true,
-    "collectCoverage": true
+    "collectCoverage": true,
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-dom",
+      "react-css-modules"
+    ],
+     "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "<rootDir>/client/app/jest/styleMock.js"
+    }
   }
 }
